syntax = "proto3";
package proto.config;

option go_package = "github.com/spinnaker/kleat/api/client/config";

import "security/authn/authn.proto";
import "security/ssl.proto";
import "config/service_enabled.proto";

// Configuration for the gate microservice.
message Gate {
  // Web server configuration.
  ServerConfig server = 1;

  // Configuration for cross-origin resource sharing.
  Cors cors = 2;

  // Wrapper for Spring configuration properties (including OAuth2 authentication).
  SpringSecurity security = 3;

  // Configuration for SAML authentication.
  security.authn.Saml saml = 4;

  // Configuration for LDAP authentication.
  security.authn.Ldap ldap = 5;

  // Configuration for X509 authentication.
  security.authn.X509 x509 = 6;

  // Wrapper for Google-specific authentication (ex: IAP).
  GoogleConfig google = 7;

  // Configuration for the status of non-core services.
  Services services = 8;

  message Services {
    ServiceEnabled kayenta = 1;
  }

  // Wrapper for Google-specific authentication.
  message GoogleConfig {
    // Configuration for Identity-Aware Proxy authentication.
    security.authn.Iap iap = 1;
  }
}

// Wrapper for Spring security configuration properties.
message SpringSecurity {
  // Configuration for OAuth2 authentication.
  security.authn.OAuth2 oauth2 = 1;

  // Configuration for basic authentication.
  security.authn.Basic basic = 2;
}

// Web server configuration.
message ServerConfig {
  // SSL configuration.
  security.ApiSsl ssl = 1;
}

// Configuration for cross-origin resource sharing.
message Cors {
  // A regex matching all URLs authentication redirects may come from.
  string allowedOriginsPattern = 1;
}
